--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
     "axios": "^1.6.7",
     "react": "^18.2.0",
     "react-beautiful-dnd": "^13.1.1",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.2.0",
+    "react-quill": "^2.0.0",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.2",
     "redux-persist": "^6.0.0",
