--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.2",
     "redux-persist": "^6.0.0",
+    "uuid": "^9.0.1",
     "vite-plugin-alias": "^0.1.1"
   },
   "devDependencies": {
